--- a/config.toml
+++ b/config.toml
@@ -22,12 +22,19 @@ trendType = "normal"
 nom = ["Hospitalisations en soins critiques","Moyenne des nouvelles hospitalisations en soins critiques par jour sur les 7 derniers jours"]
 unite = ["personnes en soins critiques","personnes en soins critiques"]
 
+[deces]
+dataset = "synthese-des-indicateurs-de-suivi-de-lepidemie-covid-19"
+res_id = "5c4e1452-3850-4b59-b11c-3dd51d7fb8b5"
+trendType = "normal"
+nom = ["Décès","Moyenne des décès par jour sur les 7 derniers jours"]
+unite = ["décès","décès"]
+
 [vaccins]
 dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
 res_id = "4f39ec91-80d7-4602-befb-4b522804c0af"
 trendType = "abnormal"
-nom = ["Personnes ayant reçu au moins une première injection"]
-unite = ["personnes"]
+nom = ["Personnes ayant reçu au moins une première injection","Personnes totalement vaccinées"]
+unite = ["personnes","personnes"]
 
 [cas_positifs]
 dataset = "synthese-des-indicateurs-de-suivi-de-lepidemie-covid-19"
