Add plots and tweets

--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,12 @@ trendType = "normal"
 nom = ["Taux d'incidence (pour 100 000 habitants)"]
 unite = ["Nombre de cas par semaine pour 100 000 habitant"]
 #Formula = P * 100000 / pop
+colorLine = "#060191"
+colorZone = "#D9E9FD"
+titleChart = "Taux d'incidence"
+yLabel = "Taux d'incidence"
+positionData = 0
+statusTwitter = "le taux d'incidence en France est de "
 
 [hospitalisations]
 dataset = "synthese-des-indicateurs-de-suivi-de-lepidemie-covid-19"
@@ -14,13 +20,26 @@ res_id = "5c4e1452-3850-4b59-b11c-3dd51d7fb8b5"
 trendType = "normal"
 nom = ["Hospitalisations","Moyenne des nouvelles hospitalisations par jour sur les 7 derniers jours"]
 unite = ["personnes hospitalisées","personnes hospitalisées"]
+colorLine = "#cc212c"
+colorZone = "#de646c"
+titleChart = "Nombre de personnes hospitalisées"
+yLabel = "personnes"
+positionData = 1
+statusTwitter = "le nombre moyen de personnes hospitalisés chaque jour en France est de "
 
-[reanimations]
+[soins_critiques]
 dataset = "synthese-des-indicateurs-de-suivi-de-lepidemie-covid-19"
 res_id = "5c4e1452-3850-4b59-b11c-3dd51d7fb8b5"
 trendType = "normal"
 nom = ["Hospitalisations en soins critiques","Moyenne des nouvelles hospitalisations en soins critiques par jour sur les 7 derniers jours"]
 unite = ["personnes en soins critiques","personnes en soins critiques"]
+colorLine = "#801767"
+colorZone = "#d171ba"
+titleChart = "Nombre de personnes en soins critiques"
+yLabel = "personnes"
+positionData = 1
+statusTwitter = "le nombre moyen de personnes entrant en soins critiques chaque jour en France est de "
+
 
 [deces]
 dataset = "synthese-des-indicateurs-de-suivi-de-lepidemie-covid-19"
@@ -28,6 +47,12 @@ res_id = "5c4e1452-3850-4b59-b11c-3dd51d7fb8b5"
 trendType = "normal"
 nom = ["Décès","Moyenne des décès par jour sur les 7 derniers jours"]
 unite = ["décès","décès"]
+colorLine = "#000000"
+colorZone = "#ab9da8"
+titleChart = "Nombre de décès"
+yLabel = "personnes"
+positionData = 1
+statusTwitter = "le nombre moyen de décès dus au Covid chaque jour en France est de "
 
 [vaccins]
 dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
@@ -35,6 +60,12 @@ res_id = "4f39ec91-80d7-4602-befb-4b522804c0af"
 trendType = "abnormal"
 nom = ["Personnes ayant reçu au moins une première injection","Personnes totalement vaccinées"]
 unite = ["personnes","personnes"]
+colorLine = "#149c56"
+colorZone = "#4fe397"
+titleChart = "Personnes ayant reçu au moins une première injection"
+yLabel = "personnes"
+positionData = 0
+statusTwitter = "le nombre de premières injections en France est de "
 
 [cas_positifs]
 dataset = "synthese-des-indicateurs-de-suivi-de-lepidemie-covid-19"
@@ -42,4 +73,9 @@ res_id = "5c4e1452-3850-4b59-b11c-3dd51d7fb8b5"
 trendType = "normal"
 nom = ["Nombre moyen de nouveaux cas confirmés quotidiens sur 7 jours (J-3)"]
 unite = ["cas positifs"]
-
+colorLine = "#fc7b03"
+colorZone = "#f5b77d"
+titleChart = "Nombre moyen de nouveaux cas confirmés quotidiens sur 7 jours (J-3)"
+yLabel = "personnes"
+positionData = 0
+statusTwitter = "le nombre de personnes positives au Covid en France est de "
