--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 attrs==20.3.0
 certifi==2020.12.5
 chardet==4.0.0
+cycler==0.10.0
 DateTime==4.3
 idna==2.10
 importlib-metadata==4.0.1
 iniconfig==1.1.1
+kiwisolver==1.3.1
 logger==1.4
+matplotlib==3.4.1
 numpy==1.20.2
 packaging==20.9
 pandas==1.2.4
+Pillow==8.2.0
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
