--- a/requirements.txt
+++ b/requirements.txt
@@ -10,19 +10,23 @@ kiwisolver==1.3.1
 logger==1.4
 matplotlib==3.4.1
 numpy==1.20.2
+oauthlib==3.1.0
 packaging==20.9
 pandas==1.2.4
 Pillow==8.2.0
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
+PySocks==1.7.1
 pytest==6.2.3
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+requests-oauthlib==1.3.0
 six==1.15.0
 toml==0.10.2
 tqdm==4.60.0
+tweepy==3.10.0
 typing-extensions==3.7.4.3
 urllib3==1.26.4
 zipp==3.4.1
