--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,9 @@ jobs:
             python plot_kpi.py
             python tweet.py
             git clone https://github.com/geoffreyaldebert/covidbackend.git /tmp/covidbackend
-            mv data /tmp/covidbackend/data
-            mv data /tmp/covidbackend/plots
-            mv data /tmp/covidbackend/kpis
+            mv ~/project/data /tmp/covidbackend/data
+            mv ~/project/data /tmp/covidbackend/plots
+            mv ~/project/data /tmp/covidbackend/kpis
             cd /tmp/covibackend
             if [ -n "$(git status --porcelain)" ]; then
               git add data
