--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ jobs:
     steps:
       - checkout:
           path: ~/project
+      - attach_workspace:
+          at: /tmp
+      - add_ssh_keys:
+          fingerprints:
+            - "6c:76:7b:00:20:3e:ea:0c:e8:d4:32:32:3b:28:7e:a7"
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "requirements.txt" }}
