--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,12 @@ jobs:
             git config --global user.email "robot@circleci.com"
             git config --global user.name "CircleCI"
             git clone https://github.com/geoffreyaldebert/covidbackend.git
-            cp -r ~/project/data/* ~/project/covidbackend/data/
-            cp -r ~/project/data/* ~/project/covidbackend/plots/
-            cp -r ~/project/data/* ~/project/covidbackend/kpis/
+            rm -rf ~/project/covidbackend/data
+            rm -rf ~/project/covidbackend/plots
+            rm -rf ~/project/covidbackend/kpis
+            mv ~/project/data ~/project/covidbackend/data/
+            mv ~/project/plots ~/project/covidbackend/plots/
+            mv ~/project/kpis ~/project/covidbackend/kpis/
             cd ~/project/covidbackend
             if [ -n "$(git status --porcelain)" ]; then
               git add data
