Correct unite vaccin

--- a/config.toml
+++ b/config.toml
@@ -142,7 +142,7 @@ dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
 res_id = "4f39ec91-80d7-4602-befb-4b522804c0af"
 trendType = "abnormal"
 nom = "Nombre de personnes ayant reçu au moins une première injection"
-unite = "personnes"
+unite = "personnes ayant reçues au moins une dose de vaccin"
 colorLine = "#149c56"
 colorZone = "#4fe397"
 titleChart = "Nombre de personnes ayant reçu au moins une première injection"
@@ -155,7 +155,7 @@ dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
 res_id = "4f39ec91-80d7-4602-befb-4b522804c0af"
 trendType = "abnormal"
 nom = "Nombre de personnes vaccinées"
-unite = "personnes"
+unite = "personnes vaccinées"
 colorLine = "#149c56"
 colorZone = "#4fe397"
 titleChart = "Nombre de personnes vaccinées"
@@ -168,7 +168,7 @@ dataset = "donnees-relatives-aux-personnes-vaccinees-contre-la-covid-19-1"
 res_id = "4f39ec91-80d7-4602-befb-4b522804c0af"
 trendType = "abnormal"
 nom = "Nombre moyen quotidien de personnes ayant reçu au moins une première injection"
-unite = "personnes"
+unite = "personnes ayant reçues au moins une dose de vaccin"
 colorLine = "#149c56"
 colorZone = "#4fe397"
 titleChart = "Nombre moyen quotidien de personnes ayant reçu au moins une première injection"
