--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,102 @@
+aiohttp==3.7.4.post0
+aiohttp-cors==0.7.0
+aioredis==1.3.1
+appnope==0.1.2
+async-timeout==3.0.1
 attrs==20.3.0
+backcall==0.2.0
+bleach==3.3.0
+blessings==1.7
+cachetools==4.2.2
 certifi==2020.12.5
 chardet==4.0.0
+click==7.1.2
+cloudpickle==1.6.0
+colorama==0.4.4
+colorful==0.5.4
 cycler==0.10.0
+dask==2021.4.1
 DateTime==4.3
+decorator==5.0.7
+filelock==3.0.12
+fsspec==2021.4.0
+google-api-core==1.26.3
+google-auth==1.30.0
+googleapis-common-protos==1.53.0
+gpustat==0.6.0
+grpcio==1.37.1
+hiredis==2.0.0
 idna==2.10
 importlib-metadata==4.0.1
 iniconfig==1.1.1
+ipykernel==5.5.3
+ipython==7.23.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.0a4
+jedi==0.18.0
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-widgets==2.0.0a1
 kiwisolver==1.3.1
+locket==0.2.1
 logger==1.4
 matplotlib==3.4.1
+matplotlib-inline==0.1.2
+modin==0.9.1
+msgpack==1.0.2
+multidict==5.1.0
+nbformat==5.1.3
 numpy==1.20.2
+nvidia-ml-py3==7.352.0
 oauthlib==3.1.0
+opencensus==0.7.12
+opencensus-context==0.1.2
 packaging==20.9
 pandas==1.2.4
+parso==0.8.2
+partd==1.2.0
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==8.2.0
 pluggy==0.13.1
+prometheus-client==0.10.1
+prompt-toolkit==3.0.18
+protobuf==3.15.8
+psutil==5.8.0
+ptyprocess==0.7.0
 py==1.10.0
+py-spy==0.3.5
+pyarrow==1.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.9.0
 pyparsing==2.4.7
+pyrsistent==0.17.3
 PySocks==1.7.1
 pytest==6.2.3
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.0.3
+ray==1.1.0
+redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
+rsa==4.7.2
 six==1.15.0
+swifter==1.0.7
 toml==0.10.2
+toolz==0.11.1
+tornado==6.1
 tqdm==4.60.0
+traitlets==5.0.5
 tweepy==3.10.0
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==4.0.0a2
+yarl==1.6.3
 zipp==3.4.1
 zope.interface==5.4.0
