--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,11 +36,11 @@ jobs:
             rm -rf ~/project/covidbackend/data
             rm -rf ~/project/covidbackend/plots
             rm -rf ~/project/covidbackend/kpis
-            mv ~/project/dist ~/project/covidbackend/dist/
-            mv ~/project/plots ~/project/covidbackend/plots/
-            mv ~/project/kpis ~/project/covidbackend/kpis/
-            mv ~/project/files_previous ~/project/covidbackend/files_previous/
-            mv ~/project/files_new ~/project/covidbackend/files_new/
+            mv ~/project/dist/* ~/project/covidbackend/dist/
+            mv ~/project/plots/* ~/project/covidbackend/plots/
+            mv ~/project/kpis/* ~/project/covidbackend/kpis/
+            mv ~/project/files_previous/* ~/project/covidbackend/files_previous/
+            mv ~/project/files_new/* ~/project/covidbackend/files_new/
             cd ~/project/covidbackend
             if [ -n "$(git status --porcelain)" ]; then
               git add dist
